--- a/styles/style.css
+++ b/styles/style.css
@@ -140,4 +140,10 @@
     .card-title>h1 {
         font-size: 1.5rem;
     }
+
+    .card-status {
+        font-size: 24px;
+        display: flex;
+        flex-direction: column;
+    }
 }
